--- a/css/css.css
+++ b/css/css.css
@@ -6,13 +6,16 @@ body{
     margin: 0;
     background-color:#33333D;
     font-family: 'IBM Plex Sans KR', sans-serif;
-    
 }
 
 
 
 main {
     padding: 1rem 0;
+}
+
+.mdc-top-app-bar {
+    width: 100vw;
 }
 
 
@@ -74,6 +77,32 @@ main {
 }
 .raid-list.complete {
     border-left: 0.5rem solid rgb(151, 151, 151);
+}
+
+
+#progress-bar {
+    height: 2px;
+    width: 100%;
+}
+
+#progress-bar.on {
+    background-color: #045d56;
+    display: block;
+    height: 2px;
+    width: 100%;
+}
+
+#progress-bar-highlight{
+    transition: margin-left 2500ms cubic-bezier(0.39, 0.58, 0.57, 1);
+    
+    height: 2px;
+    width: 40%;
+    margin-left: -40%;
+    position: fixed;
+    /* display: none; */
+}
+#progress-bar-highlight.s{
+    margin-left: 100%;
 }
 
 .raid-list {
