--- a/css/css.css
+++ b/css/css.css
@@ -40,8 +40,11 @@ main {
     background-color: var(--dark);
     
     padding-top: 0.5rem !important;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+
     overflow-y: auto;
-    width: 100vw;
+    width: calc(100vw - 1.5rem);
     height: calc(100vh - 180px);
 }
 
@@ -261,8 +264,8 @@ main {
     background-color: var(--dark-2);
 }
 
-.raid-member-simple:not(:last-child){
-    border-bottom: 2px solid var(--black);
+.raid-member-simple{
+    border-bottom: 3px solid var(--black);
 }
 
 .raid-member-simple.me{
@@ -270,11 +273,12 @@ main {
 }
 
 .raid-member-simple .char-name{
-    color:var(--grey)
+    color:var(--grey);
+    font-size: 0.9rem;
 }
 
 .raid-member-simple.me .user-name{
-    color:var(--primary-hightlight)
+    color:var(--primary-hightlight);    
 }
 
 .raid-member-list {
@@ -283,7 +287,7 @@ main {
     padding: 0.5rem;
     /* margin-top: -0.25rem; */
     margin-bottom: 0.25rem;
-    width: calc(100vw - 1.5rem);
+    width: calc(100vw - 2.5rem);
     height:auto;
     
     background-color: var(--black);
@@ -306,6 +310,7 @@ main {
     border-radius: 2px;
     padding: 0 0.5rem;
     background-color: var(--black);
+    font-size: 0.9rem;
 }
 
 
