--- a/css/css.css
+++ b/css/css.css
@@ -43,10 +43,28 @@ main {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
 
-    overflow-y: auto;
+    overflow: overlay;
     width: calc(100vw - 1.5rem);
     height: calc(100vh - 180px);
 }
+
+
+
+/* scroll */
+.scroll::-webkit-scrollbar {
+    width: 25px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    border: 10px solid transparent;
+    box-shadow: inset 5px 0 0 0 rgba(0,0,0,0);
+}
+
+.scroll::-webkit-scrollbar-track {
+    opacity: 0;
+}
+
+
 
 #main-container {
     transition: margin-left 0.75s ease-in-out;
