--- a/css/css.css
+++ b/css/css.css
@@ -3,10 +3,12 @@
     --dark: #1A1D21;
     /* --dark-2 : #2d2d2d; */
     --dark-2 : #2d2d2d;
+    --dark-3 : #2a2e35;
     --grey : #979797;
     /* --dark-grey: #373740; */
     --dark-grey: #1F2227;
     --deep-dark-grey : #4f5655;
+    --primary: #00312a;
     --primary-hightlight: #1EB980;
     --secondary: #045d56;
     --black: #101211;
@@ -145,6 +147,17 @@ main {
     color: #696969;
 }
 
+.raid-list{
+    padding: 1rem 2rem 1rem 0.25rem;
+    margin: 0.2rem 0rem;
+    background-color:var(--dark-grey);
+    flex-direction: row;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 999;
+
+}
 
 
 #progress-bar {
@@ -176,17 +189,7 @@ main {
 }
 
 
-.raid-list{
-    padding: 1rem 1rem 1rem 0.25rem;
-    margin: 0.2rem 0rem;
-    background-color:var(--dark-grey);
-    flex-direction: row;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 999;
 
-}
 
 
 
@@ -274,6 +277,7 @@ main {
     margin-top:0;
 }
 
+.complete-button-container,
 .raid-member-simple {
     display: inline-flex;
     flex-direction: column;
@@ -296,6 +300,28 @@ main {
     /* background: linear-gradient(120deg, rgba(13,82,58,1) 0%, rgba(25,51,46,1) 10%, rgba(31,34,39,1) 30%); */
     box-shadow: inset 0 0.4rem 0px var(--secondary);
 }
+
+.complete-button-container {
+    background: var(--primary);
+    flex-direction: row;
+    cursor: pointer;
+    box-shadow: inset 0 0.4rem 0px var(--secondary);
+}
+
+
+
+
+.btn-complete{
+    width:100%;
+    height:100%;
+    background: transparent;
+    border: transparent;
+    color: white;
+    outline: none;
+    font-size: 1rem;
+}
+
+
 
 .raid-member-simple .char-name{
     color:var(--grey);
@@ -366,7 +392,6 @@ main {
 
 
 
-
 /* pure ripple css */
 .ripple {
     background-position: center;
@@ -377,7 +402,19 @@ main {
 }
 
 .ripple:active {
-    background-color: #2a2e35;
+    background-color: var(--dark-3);
     background-size: 1%;
+    transition: background 0s;
+}
+
+
+
+.ripple.primary:hover {
+    background: var(--primary) radial-gradient(circle, transparent 1%, var(--primary) 1%) center / 15000%;
+}
+
+.ripple.primary:active {
+    background-color: var(--secondary);
+    background-size: 100%;
     transition: background 0s;
 }
