--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,5 @@
 :root {
+    --mdc-theme-primary: #045d56;
     /* --dark: #33333D; */
     --dark: #1A1D21;
     /* --dark-2 : #2d2d2d; */
@@ -73,7 +74,7 @@ main {
 
 
 #main-container {
-    transition: margin-left 0.75s ease-in-out;
+    transition: margin-left 0.55s ease-in-out;
     margin-left: 0;
 }
 
@@ -417,4 +418,60 @@ main {
     background-color: var(--secondary);
     background-size: 100%;
     transition: background 0s;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* modal */
+
+#modal{
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    z-index: 99999;
+
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+} 
+
+.modal-pop{
+    top: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    position: absolute;
+    z-index: 99999;
+
+    /* width: min(100vw, 280px); */
+    /* height: min(100vh, 400px); */
+    padding: 2rem;
+    
+    background-color: var(--dark);
+    /* opacity: 0.5; */
+} 
+
+.mdc-text-field--focused:not(.mdc-text-field--disabled) .mdc-floating-label {
+    color: var(--secondary)
+}
+
+.hidden {
+    /* visibility: hidden; */
+    display: none;
 }
