--- a/css/css.css
+++ b/css/css.css
@@ -164,6 +164,7 @@ main {
 #progress-bar {
     height: 2px;
     width: 100vw;
+    transition: background-color 0.55s ease-in-out;
     background-color: var(--dark);
     position: sticky;
     top: 56px;
@@ -178,15 +179,14 @@ main {
 }
 
 #progress-bar-highlight{
-    transition: margin-left 2500ms cubic-bezier(0.39, 0.58, 0.57, 1);
-    
+    transition: none;
     height: 2px;
     width: 40%;
     margin-left: -40%;
-    
 }
 #progress-bar-highlight.s{
     margin-left: 100%;
+    transition: margin-left 1500ms cubic-bezier(0.39, 0.58, 0.57, 1);
 }
 
 
